@@ -117,18 +117,6 @@ Span.prototype.end = function (endTime) {
 
   this._agent._instrumentation.addEndedSpan(this)
   this.transaction._captureBreakdown(this)
-
-  // Reduce this span's memory usage by dropping references, except to fields
-  // required to support `interface Span`.
-  // Span fields:
-  this._db = null
-  this._http = null
-  this._message = null
-  this._capturedStackTrace = null
-  // GenericSpan fields:
-  // - Cannot drop `this._context` because it is used for traceparent and ids.
-  this._timer = null
-  this._labels = null
 }
 
 Span.prototype.setDbContext = function (context) {
@@ -275,6 +263,20 @@ Span.prototype._encode = function (cb) {
     } else if (frames) {
       payload.stacktrace = frames
     }
+
+    // Reduce this span's memory usage by dropping references once they're
+    // no longer needed.  We also keep fields required to support
+    // `interface Span`.
+    // Span fields:
+    self._db = null
+    self._http = null
+    self._message = null
+    self._capturedStackTrace = null
+    // GenericSpan fields:
+    // - Cannot drop `this._context` because it is used for traceparent and ids.
+    self._timer = null
+    self._labels = null
+
     cb(null, payload)
   }
 }
