@@ -76,6 +76,9 @@ specifying links during span creation (with the limitation that span link
 [float]
 ===== Bug fixes
 
+- Fixes a bug where the the agent would not serialize the database context of
+  a span. ({issues}2715[#2715])
+
 [float]
 ===== Chores
 
